add swiper slider

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -409,8 +409,4 @@ box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px !important;
 
 /* END Slick Slider */
 
-/* start number */
-/* .numbers-card{
-  background: var(--mainBackground);
-} */
-/* end number */
+/*  */
