--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -20,6 +20,7 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
+/* font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif !important; */
 }
 
 body {
@@ -48,20 +49,31 @@ a {
 }
 
 /* 🎨 قسم المقالات */
-.latest-articles-section {
-  padding: 60px 0;
-  /* background-color: #f8f9fa; */
+.latest-articles-section{
+ padding: 60px 0;
+}
+.latest-articles-section .container{
+ 
+  display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  
 }
 
 .latest-articles-section h2 {
   border-radius: 30px;
-      padding: 20px;
+      padding: 5px;
   font-weight: 900;
   color: #222;
-  margin-bottom: 40px;
+
+  /* margin-bottom: 40px; */
   /* background-color: var(--mainColor); */
 }
 
+.latest-articles-section div p{
+  max-width: 60%;
+}
 .article-card {
   transition: all 0.3s ease-in-out;
   border-radius: 12px;
@@ -307,16 +319,22 @@ width: 95% !important;
 @media  (min-width: 890px){
 .content-section div div{
   font-size: 2rem;
-  align-self: center !important;
+  /* align-self: center !important; */
 }
 }
 
 @media  (max-width: 767px){
 .vedio-about{
-     width: 25% !important;
+     width: 35% !important;
   align-self: center !important;
 }
 }
+@media  (max-width: 767px){
+.content-section div  p{
+   text-align: center;
+}
+} 
+
 @media  (min-width: 414px){
 .content-section div div{
   font-size: 1.5rem;
@@ -415,4 +433,9 @@ box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px !important;
 
 /* END Slick Slider */
 
-/*  */
+/* registration */
+.registration-title{
+background: var(--mainBackground);
+color: black ;
+}
+/* registration */
